; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_aslprepkg.c_ApPackageTooLarge.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_aslprepkg.c_ApPackageTooLarge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AslGbl_MsgBuffer = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"%s: length is %u, only %u required\00", align 1
@ASL_REMARK = common dso_local global i32 0, align 4
@ASL_MSG_RESERVED_PACKAGE_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32, i32)* @ApPackageTooLarge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ApPackageTooLarge(i8* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* @AslGbl_MsgBuffer, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @sprintf(i32 %9, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %10, i32 %11, i32 %12)
  %14 = load i32, i32* @ASL_REMARK, align 4
  %15 = load i32, i32* @ASL_MSG_RESERVED_PACKAGE_LENGTH, align 4
  %16 = load i32*, i32** %6, align 8
  %17 = load i32, i32* @AslGbl_MsgBuffer, align 4
  %18 = call i32 @AslError(i32 %14, i32 %15, i32* %16, i32 %17)
  ret void
}

declare dso_local i32 @sprintf(i32, i8*, i8*, i32, i32) #1

declare dso_local i32 @AslError(i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
